# Manatan-SDK

./: Cargo.toml  README.md
crates/manatan-sdk/: Cargo.toml  README.md
crates/manatan-sdk/src/: assets.rs  browser.rs  client.rs  context.rs  html.rs  javascript.rs  lib.rs  manifest.rs  model.rs  novel.rs  runtime.rs  services.rs  source.rs  storage.rs
crates/manatan-sdk/wit/: world.wit
docs/: AUTHORING.md  FORMAT.md  PORTING.md
wit/: world.wit
