[workspace]
resolver = "2"
members = ["crates/manatan-sdk"]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/KolbyML/Manatan-SDK"
authors = ["Kolby Moroz Liebl"]

[workspace.dependencies]
manatan-sdk = { path = "crates/manatan-sdk" }
base64 = "0.22"
scraper = "0.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2.5"
wit-bindgen = "0.34"

[profile.release]
opt-level = "s"
lto = true
strip = true
