[package]
name = "manatan-sdk"
description = "Public SDK for building Manatan manga, video, and novel extensions as WebAssembly components."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"
publish = ["crates-io"]
include = ["src/**", "wit/**", "README.md"]
keywords = ["manatan", "manga", "anime", "novel", "wasm"]
categories = ["wasm", "api-bindings"]

[dependencies]
base64.workspace = true
scraper.workspace = true
serde.workspace = true
serde_json.workspace = true
url.workspace = true
wit-bindgen.workspace = true
